--- a/style.css
+++ b/style.css
@@ -1,261 +1,388 @@
 /* GENERAL */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.logo {
-  font-family: "Pacifico", sans-serif;
+:root {
+  --primary-color: #ff651c;
+  --dark-color: #373737;
 }
 
 body {
-  font-family: "Poppins", "Noto Sans KR", sans-serif;
-  padding-top: 16vh;
+  font-family: "Jost", sans-serif;
+  font-weight: 400;
+  color: #555;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
-p {
-  color: rgb(85, 85, 85, green, blue);
-}
-
-/* TRANSITION */
-a,
-.btn {
-  transition: all 300ms ease;
-}
-
-/* DESKTOP NAV */
-nav,
-.nav-links {
-  display: flex;
-}
-
-nav {
-  justify-content: space-around;
-  align-items: center;
-  height: 13vh;
-  position: fixed;
-  background-color: #f0f0f0f0;
-  width: 100%;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #f0f0f0;
-  z-index: 1000;
-}
-
-.nav-links {
-  gap: 2rem;
-  list-style: none;
-  font-size: 1.5rem;
+img {
+  max-width: 100%;
 }
 
 a {
-  color: black;
+  color: var(--primary-color);
   text-decoration: none;
-  text-decoration-color: white;
 }
 
 a:hover {
-  color: grey;
-  text-decoration: underline;
-  text-underline-offset: 0.7rem;
-  text-decoration-color: #007bff;
-}
-
-.logo {
-  font-size: 2rem;
-}
-
-.logo:hover {
-  cursor: pointer;
-}
-
-/* HAMBURGER MENU */
-#hamburger-nav {
-  display: none;
-}
-
-.hamburger-menu {
-  position: relative;
-  display: inline-block;
-}
-
-.hamburger-icon {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 24px;
-  width: 30px;
-  cursor: pointer;
-}
-
-.hamburger-icon span {
-  width: 100%;
-  height: 2px;
-  background-color: black;
-  transition: all 0.3 ease-in-out;
-}
-
-.menu-links {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: white;
-  width: fit-content;
-  max-height: 0;
-  overflow: hidden;
-  transition: all 0.3 ease-in-out;
-}
-
-.menu-links a {
-  display: block;
-  padding: 10px;
-  text-align: center;
-  font-size: 1.5rem;
-  color: black;
+  color: #cb612f;
   text-decoration: none;
-  transition: all 0.3 ease-in-out;
 }
 
-.menu-links li {
-  list-style: none;
+.text-primary {
+  color: var(--primary-color) !important;
 }
 
-.menu-links.open {
-  max-height: 300px;
+.text-dark {
+  color: var(--dark-color);
 }
 
-.hamburger-icon.open span:first-child {
-  transform: rotate(45deg) translate(10px, 5px);
+/* Header */
+.main-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 11;
+  background: transparent;
+  transition: 0.3s background;
 }
 
-.hamburger-icon.open span:nth-child(2) {
-  opacity: 0;
+.main-header .navbar {
+  padding: 15px 0;
+  background-color: rgba(255, 255, 255, 0.2); 
+  backdrop-filter: blur(10px); 
+  -webkit-backdrop-filter: blur(10px); 
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 살짝 그림자 추가로 입체감 */
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.hamburger-icon.open span:last-child {
-  transform: rotate(-45deg) translate(10px, -5px);
+.main-header .navbar-nav > li {
+  padding: 0 10px;
 }
 
-.hamburger-icon span:first-child {
-  transform: none;
-}
-
-.hamburger-icon span:first-child {
-  opacity: 1;
-}
-
-.hamburger-icon span:first-child {
-  transform: none;
-}
-
-/* SECTIONS */
-section {
-  padding-top: 4vh;
-  height: 96vh;
-  margin: 0 10rem;
-  box-sizing: border-box;
-  min-height: fit-content;
-}
-
-.section-container {
-  display: flex;
-}
-
-/* PROFILE SECTION */
-#profile {
-  display: flex;
-  justify-content: center;
-  gap: 5rem;
-  height: 80vh;
-}
-
-.section__pic-container {
-  display: flex;
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-}
-
-.section__text {
-  align-self: center;
-  text-align: center;
-}
-
-.section__text p {
+.main-header .navbar-nav > li > .nav-link {
+  padding: 0 5px;
+  line-height: 35px;
   font-weight: 600;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: var(--dark-color);
+  letter-spacing: 3px;
+  position: relative;
 }
 
-.section__text__p1 {
-  text-align: center;
+.main-header .navbar-nav > li > .nav-link:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background: var(--primary-color);
+  transition: width 0.3s ease;
 }
 
-.section__text__p2 {
-  font-size: 1.75rem;
-  margin-bottom: 1rem;
+.main-header .navbar-nav > li > .nav-link:hover {
+  color: var(--primary-color);
 }
 
-.title {
-  font-size: 3rem;
-  text-align: center;
+.main-header .navbar-nav > li > .nav-link:hover:after {
+  width: 100%;
 }
 
-#socials-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 1rem;
+.nav-button {
+  font-family: "Noto Sans KR", sans-serif;
 }
 
-/* ICONS */
-.icon {
+@media (max-width: 991px) {
+  .main-header .navbar-collapse {
+    border-bottom: 2px solid var(--dark-color);
+    border-top: 2px solid var(--dark-color);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: #fff;
+  }
+
+  .main-header .navbar-nav > li + li {
+    border-top: 1px solid rgba(55, 55, 55, 0.1);
+  }
+
+  .main-header .navbar-nav > li > .nav-link {
+    line-height: 50px;
+  }
+
+  .main-header .navbar-nav > li > .nav-link::after {
+    display: none;
+  }
+
+  .main-header .navbar-toggler {
+    display: flex;
+    flex-direction: column;
+    border: none;
+    padding: 4px 9px;
+    outline: none;
+    box-shadow: none;
+  }
+
+  .main-header .navbar-toggler span {
+    width: 25px;
+    height: 2px;
+    background: var(--dark-color);
+    margin: 4px 0;
+    transition: 0.3s;
+  }
+
+  .main-header .navbar-toggler:not(.collapsed) span:nth-child(1) {
+    transform: translateY(10px) rotate(45deg);
+  }
+
+  .main-header .navbar-toggler:not(.collapsed) span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .main-header .navbar-toggler:not(.collapsed) span:nth-child(3) {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+}
+
+.fixed-header .main-header {
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0.125rem 0.25rem rgba(55, 55, 55, 0.07);
+}
+
+.colored-btn {
+  padding: 8px 20px;
+  border: 2px solid var(--primary-color);
+  font-size: 14px;
+  line-height: 1.5;
+  text-decoration: none;
+  font-weight: 500;
+  letter-spacing: 2px;
+  transition: ease all 0.3s;
+  display: inline-block;
+  background: var(--primary-color);
+  color: #fff;
+  box-shadow: 6px 6px 0 -1px var(--dark-color);
+}
+
+.colored-btn:hover {
+  color: #fff;
+  background: var(--dark-color);
+  border-color: var(--dark-color);
+  box-shadow: 5px 5px 0 -2px var(--primary-color);
   cursor: pointer;
-  height: 2rem;
 }
 
-/* BUTTONS */
-.btn-container {
+.bg-gray {
+  background-color: rgba(254, 196, 72, 0.1);
+}
+
+.bg-dark {
+  background-color: var(--dark-color) !important;
+}
+
+main {
+  position: relative;
+  z-index: 1;
+}
+
+/* Home Section */
+.home-section {
   display: flex;
-  justify-content: center;
-  gap: 1rem;
+  align-items: center;
+  justify-content: cennter;
+  position: relative;
+  overflow: hidden;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  min-height: 100vh;
 }
 
-.btn {
+@media (max-width: 767px) {
+  .home-section {
+    padding-bottom: 70px;
+  }
+}
+
+.home-section .container {
+  position: relative;
+  z-index: 1;
+}
+
+.home-section .home-intro h6 {
   font-weight: 600;
-  transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
-  border-radius: 2rem;
+  color: var(--dark-color);
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin: 0 0 30px;
 }
 
-.btn-color-1,
-.btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
-  cursor: pointer;
+@media (max-width: 767px) {
+  .home-section .home-intro h6 {
+    margin: 0 0 20px;
+  }
 }
 
-.btn-color-1,
-.btn-color-2:hover {
-  background: rgb(53, 53, 53);
-  color: white;
+.home-section .home-intro h1 {
+  font-size: 70px;
+  font-weight: 600;
+  color: var(--dark-color);
+  margin: 0 0 35px;
+  line-height: 1;
 }
 
-.btn-color-2:hover {
-  background: rgb(0, 0, 0);
+@media (max-width: 1200px) {
+  .home-section .home-intro h1 {
+    font-size: 60px;
+  }
 }
 
-.btn-color-2 {
-  background: none;
+@media (max-width: 767px) {
+  .home-section .home-intro h1 {
+    margin: 0 0 25px;
+    font-size: 45px;
+  }
 }
 
-.btn-color-2:hover {
-  border: rgb(255, 255, 255) 0.1rem solid;
+.home-section .home-intro h6 span {
+  border-bottom: 2px solid #fec448;
 }
 
-.btn-container {
-  gap: 1rem;
+.home-section .home-intro p {
+  font-size: 20px;
+}
+
+@media (max-width: 767px) {
+  .home-section .home-intro p {
+    font-size: 18px;
+  }
+}
+
+.home-image img {
+  height: 450px;
+  width: 450px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid #000;
+  position: relative;
+  z-index: -2;
+}
+
+@media (max-width: 767px) {
+  .home-image img {
+    height: 300px;
+    width: 300px;
+  }
+}
+
+.anim-elements {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.anim-elements .anim-element {
+  position: absolute;
+  font-size: 30px;
+}
+
+.anim-elements .anim-element:nth-child(1) {
+  top: 12%;
+  left: 15%;
+  color: #e34f26;
+  animation: aniOne 13s infinite linear alternate;
+}
+
+.anim-elements .anim-element:nth-child(2) {
+  bottom: 15%;
+  left: 45%;
+  color: #1572b6;
+  animation: aniTwo 13s infinite linear alternate;
+}
+
+.anim-elements .anim-element:nth-child(3) {
+  bottom: 20%;
+  left: 30%;
+  color: #ffc928;
+  animation: aniThree 13s infinite linear alternate;
+}
+
+.anim-elements .anim-element:nth-child(4) {
+  top: 15%;
+  right: 25%;
+  color: #61dafb;
+  animation: aniFour 13s infinite linear alternate;
+}
+
+.anim-elements .anim-element:nth-child(5) {
+  top: 18%;
+  right: 25%;
+  color: #181717;
+  animation: aniThree 13s infinite linear alternate;
+}
+
+@keyframes aniOne {
+  0% {
+    transform: translate(0, 0) rotate(0);
+  }
+  40% {
+    transform: translate(141px, 72px) rotate(75deg);
+  }
+  80% {
+    transform: translate(-40px, 72px) rotate(145deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0);
+  }
+}
+
+@keyframes aniTwo {
+  0% {
+    transform: translate(0, 0) rotate(0) scale(1);
+  }
+  20% {
+    transform: translate(73px, -1px) rotate(75deg) scale(0.9);
+  }
+  60% {
+    transform: translate(83px, 122px) rotate(108deg) scale(1.2);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0) scale(1);
+  }
+}
+
+@keyframes aniThree {
+  0% {
+    transform: translate(-300px, 151px) rotate(0);
+  }
+  100% {
+    transform: translate(251px, -200px) rotate(0);
+  }
+}
+
+@keyframes aniFour {
+  0% {
+    transform: translate(61px, -99px) rotate(0);
+  }
+  20% {
+    transform: translate(4px, -190px) rotate(38deg);
+  }
+  60% {
+    transform: translate(-263px, -164px) rotate(108deg);
+  }
+  100% {
+    transform: translate(-1px, 0) rotate(180deg);
+  }
+}
+
+@media (max-width: 990px) and (min-width: 768px) {
+  .home-intro h6 {
+    font-size: 18px; /* 텍스트 크기를 조정 */
+  }
+  .home-intro {
+    padding-top: 20px; /* 위쪽 여백 줄임 */
+  }
 }
