--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   color: #555;
 }
 
+.section-container {
+  display: flex;
+}
+
 img {
   max-width: 100%;
 }
@@ -32,6 +36,20 @@ a:hover {
   color: var(--dark-color);
 }
 
+.title {
+  font-size: 3rem;
+  text-align: center;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* Icons */
+.icon {
+  height: 2rem;
+}
+
 /* Header */
 .main-header {
   position: fixed;
@@ -45,9 +63,9 @@ a:hover {
 
 .main-header .navbar {
   padding: 15px 0;
-  background-color: rgba(255, 255, 255, 0.2); 
-  backdrop-filter: blur(10px); 
-  -webkit-backdrop-filter: blur(10px); 
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 살짝 그림자 추가로 입체감 */
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -385,4 +403,78 @@ main {
   .home-intro {
     padding-top: 20px; /* 위쪽 여백 줄임 */
   }
+}
+
+/* ABOUT SECTION */
+
+#about {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding-top: 85px;
+  padding-bottom: 85px;
+  min-height: 100vh;
+}
+
+.about-containers {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%; /* 너비를 100%로 설정 */
+}
+
+.about-details-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 2rem;
+  flex-wrap: wrap;
+  text-align: center;
+  width: 100%;
+}
+
+.about-pic {
+  border-radius: 1rem;
+  width: 100%;
+  max-width: 400px; /* 이미지 크기 고정 */
+}
+
+.details-container {
+  padding: 2rem;
+  background: white;
+  border-radius: 1rem;
+  border: 1px solid rgb(163, 163, 163);
+  text-align: center;
+  flex: 1; 
+  max-width: 1050px; 
+  height: auto; 
+  min-height: 200px; 
+  white-space: nowrap;
+  flex: none; 
+  width: auto;
+}
+
+.section-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+
+.section__pic-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 100%;
+  max-width: 400px; /* 이미지 크기 고정 */
+}
+
+.arrow {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
 }
