--- a/style.css
+++ b/style.css
@@ -559,15 +559,26 @@ main {
   min-height: 100vh;
 }
 
-.skills-container {
-  width: 350px;
-  height: 500px;
+.card-container {
+  width: 280px;
+  height: 280px;
+  perspective: 800px;
+  margin-left: 85px;
+  margin-right: 85px;
+  display: flex;
 }
 
+.card-container:hover > .card {
+  cursor: pointer;
+  transform: rotateY(180deg);
+}
 
 .card {
   height: 100%;
   width: 100%;
+  position: relative;
+  transition: transform 1500ms;
+  transform-style: preserve-3d;
 }
 
 .front,
@@ -576,8 +587,21 @@ main {
   width: 100%;
   border-radius: 2rem;
   box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
+  position: absolute;
+  backface-visibility: hidden;
 }
 
 .front {
   background-image: url(./images/HTML5_logo.png);
+}
+
+.back {
+  background-color: #3a3a3a;
+  transform: rotateY(180deg);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  color: white;
 }
