--- a/style.css
+++ b/style.css
@@ -481,6 +481,7 @@ main {
   position: absolute;
   right: 2rem;
   bottom: 2rem;
+  cursor: pointer;
 }
 
 /* 모바일 화면용 스타일 */
@@ -556,7 +557,7 @@ main {
   justify-content: space-between;
   align-items: center;
   position: relative;
-  padding-top: 50px;
+  padding-top: 85px;
   min-height: 100vh;
 }
 
@@ -567,6 +568,10 @@ main {
   padding-top: 85px;
   padding-bottom: 85px;
   min-height: 100vh;
+}
+
+.skills-section h1 {
+  margin-bottom: -13px;
 }
 
 .card-container {
@@ -785,4 +790,16 @@ main {
 .back p {
   font-size: 1rem;
   line-height: 1.6;
+}
+
+@media (max-width: 767px) {
+  .skills-computer {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .skills-mobile {
+    display: block;
+  }
 }
