--- a/style.css
+++ b/style.css
@@ -557,6 +557,23 @@ main {
   justify-content: space-between;
   align-items: center;
   position: relative;
+  padding-top: 50px;
+  padding-bottom: 85px;
+  min-height: 100vh;
+}
+
+.section-heading {
+  padding-bottom: 60px;
+  text-align: center;
+}
+
+/* Desktop ver. */
+#skills {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
   padding-top: 85px;
   min-height: 100vh;
 }
@@ -574,232 +591,136 @@ main {
   margin-bottom: -13px;
 }
 
-.card-container {
-  width: 280px;
-  height: 280px;
-  perspective: 800px;
-  margin-left: 85px;
-  margin-right: 85px;
-  display: flex;
+/* Mobile ver. */
+@media (max-width: 991px) {
+  .section-heading {
+    padding-bottom: 40px;
+  }
 }
 
-.card-container:hover > .card {
-  cursor: pointer;
-  transform: rotateY(180deg);
+@media (max-width: 767px) {
+  .section-heading {
+    padding-bottom: 30px;
+  }
 }
 
-.card {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  transition: transform 1500ms;
-  transform-style: preserve-3d;
-}
-
-.front,
-.back {
-  height: 100%;
-  width: 100%;
-  border-radius: 2rem;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.front {
-  background-image: url(./images/HTML5_logo.png);
-}
-
-.back {
-  background-color: #3a3a3a;
-  transform: rotateY(180deg);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 5rem;
-  color: white;
-}
-
-.skills-section {
-  width: 100vw;
-  background-color: rgba(254, 196, 72, 0.1);
-}
-
-.skills-section-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.first-line, .second-line {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 30px;
-}
-
-.card-container {
-  width: 380px;
-  height: 250px;
-  perspective: 800px;
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.card-container:hover > .card {
-  cursor: pointer;
-  transform: rotateY(180deg);
-}
-
-.card {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  transition: transform 1500ms;
-  transform-style: preserve-3d;
-}
-
-.front-html,
-.back {
-  height: 100%;
-  width: 100%;
-  border-radius: 2rem;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.front-css,
-.back {
-  height: 100%;
-  width: 100%;
-  border-radius: 2rem;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.front-js,
-.back {
-  height: 100%;
-  width: 100%;
-  border-radius: 2rem;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.front-react,
-.back {
-  height: 100%;
-  width: 100%;
-  border-radius: 2rem;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.front-github,
-.back {
-  height: 100%;
-  width: 100%;
-  border-radius: 2rem;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.front-photoshop,
-.back {
-  height: 100%;
-  width: 100%;
-  border-radius: 2rem;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.front-html {
-  background-image: url(./images/HTML5_logo.png);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.front-css {
-  background-image: url(./images/CSS_logo.png);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.front-js {
-  background-image: url(./images/javscript_logo.png);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.front-react {
-  background-image: url(./images/react_logo.png);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.front-github {
-  background-image: url(./images/github_logo.png);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.front-photoshop {
-  background-image: url(./images/photoshop_logo.png);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.back {
-  background: linear-gradient(135deg, #3a3a3a, #595959);
-  transform: rotateY(180deg);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  color: white;
-  padding: 1.5rem;
-  border-radius: 2rem;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  transition: all 0.5s ease;
-}
-
-.back h1 {
-  font-size: 1.5rem;
+.section-title {
+  font-size: 50px;
+  margin: 0;
+  color: var(--dark-color);
   font-weight: 600;
-  letter-spacing: 2px;
-  margin-bottom: -0.5rem;
+  letter-spacing: 4px;
+  text-transform: uppercase;
 }
 
-.back p {
-  font-size: 1rem;
-  line-height: 1.6;
-}
-
-@media (max-width: 767px) {
-  .skills-computer {
-    display: none;
+@media (max-width: 991px) {
+  .section-title {
+    padding-bottom: 45px;
   }
 }
 
 @media (max-width: 767px) {
-  .skills-mobile {
-    display: block;
+  .section-title {
+    padding-bottom: 38px;
   }
+}
+
+.feature-box {
+  padding: 18px;
+  border: 2px solid var(--dark-color);
+  box-shadow: 0 0 0 0 var(--dark-color);
+  display: flex;
+  transition: 0.3s;
+}
+
+.feature-box:hover {
+  box-shadow: 5px 5px 0 0 var(--dark-color);
+}
+
+@media (max-width: 767px) {
+  .feature-box {
+    padding: 30px;
+  }
+}
+
+.feature-box .icon {
+  width: 50px;
+  height: 50px;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid var(--dark-color);
+  background: #fff;
+  font-size: 32px;
+}
+
+.feature-box .bxl-html5 {
+  color: #e34f26;
+}
+
+.feature-box .bxl-css3 {
+  color: #1572b6;
+}
+
+.feature-box .bxl-javascript {
+  color: #ffc928;
+}
+
+.feature-box .bxl-react {
+  color: #61dafb;
+}
+
+.feature-box .bxl-github {
+  color: #181717;
+}
+
+.feature-box .bxl-adobe {
+  color: #ff0000;
+}
+
+.feature-box .content {
+  max-width: calc(100%-70px);
+  padding-left: 20px;
+}
+
+.bg-1 {
+  background-color: #ffe4c4;
+}
+
+.bg-2 {
+  background-color: #e0f7fa;
+}
+
+.bg-3 {
+  background-color: #fff9c4;
+}
+
+.bg-4 {
+  background-color: #b3e5fc;
+}
+.bg-5 {
+  background-color: #f5f5f5;
+}
+.bg-6 {
+  background-color: #f8bbd0;
+}
+
+.feature-box h5 {
+  font-size: 24px;
+  color: var(--dark-color);
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 767px) {
+  .feature-box h5 {
+    font-size: 22px;
+  }
+}
+
+.feature-box p {
+  margin: 0;
+  color: var(--dark-color);
+  font-size: 17px;
 }
