--- a/style.css
+++ b/style.css
@@ -25,12 +25,12 @@ img {
   max-width: 100%;
 }
 
-a {
+nav a {
   color: var(--primary-color);
   text-decoration: none;
 }
 
-a:hover {
+nav a:hover {
   color: #cb612f;
   text-decoration: none;
 }
@@ -809,4 +809,45 @@ a,
   gap: 2rem;
   justify-content: space-between;
   align-items: center;
+}
+
+/* CONTACT */
+#contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.54rem;
+  margin: 1rem;
+}
+
+.contact-info-container p {
+  font-size: larger;
+}
+
+.contact-icon {
+  cursor: default;
+  height: 3.5rem;
+}
+
+#contact a {
+  text-decoration: underline;
+  color: black;
 }
